tests/ui/const-generics/generic_const_exprs/issue-108165.stderr
error[E0658]: associated const equality is incomplete
  --> $DIR/issue-108165.rs:5:35
   |
LL |     const A: dyn TraitWAssocConst<A=0>;
   |                                   ^^^
   |
   = note: see issue #92827 <https://github.com/rust-lang/rust/issues/92827> for more information
   = help: add `#![feature(associated_const_equality)]` to the crate attributes to enable

error[E0658]: associated const equality is incomplete
  --> $DIR/issue-108165.rs:9:29
   |
LL | fn main<A: TraitWAssocConst<A=0>>() {}
   |                             ^^^
   |
   = note: see issue #92827 <https://github.com/rust-lang/rust/issues/92827> for more information
   = help: add `#![feature(associated_const_equality)]` to the crate attributes to enable

error[E0391]: cycle detected when computing type of `TraitWAssocConst::A`
  --> $DIR/issue-108165.rs:5:5
   |
LL |     const A: dyn TraitWAssocConst<A=0>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires computing type of `TraitWAssocConst::A::{constant#0}`...
  --> $DIR/issue-108165.rs:5:37
   |
LL |     const A: dyn TraitWAssocConst<A=0>;
   |                                     ^
   = note: ...which again requires computing type of `TraitWAssocConst::A`, completing the cycle
note: cycle used when computing type of `main::{constant#0}`
  --> $DIR/issue-108165.rs:9:31
   |
LL | fn main<A: TraitWAssocConst<A=0>>() {}
   |                               ^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0391, E0658.
For more information about an error, try `rustc --explain E0391`.
